# xrdcl-authz-plugin

./: CMakeLists.txt  LICENSE
.github/workflows/: main.yaml
configs/: export-symbols-anon
configs/client.plugins.d/: authz.conf  authz.conf.in
src/: XrdClAuthzPlugin.cc  XrdSecProtocolunix.cc
